# xianyu-auto-reply-fix

./: .gitignore  README.md  XianyuAutoAsync.py  announcement.json  db_manager.py  docker-compose-cn.yml  product_publisher.py  product_publisher_config.yml  pyproject.toml  reply_server.py  xianyu_build_backend.py
skills/xianyu-cli/: SKILL.md
skills/xianyu-cli/agents/: openai.yaml
skills/xianyu-cli/references/: current-contract.md
static/: index.html  update_log.txt
static/js/: app.js
tests/: test_api_client.py  test_card_cli.py  test_delivery_rule_cli.py  test_product_publisher_quick_login.py  test_product_publisher_selectors.py  test_publish_cli.py  test_publish_hash_compat.py  test_publish_request_rewriter.py
utils/: order_detail_fetcher.py  publish_request_rewriter.py
xianyu_cli/: __init__.py  cli_common.py  main.py  output.py
xianyu_cli/api/: __init__.py  client.py
xianyu_cli/commands/: __init__.py  card.py  delivery_rule.py  publish.py
xianyu_cli/interactive/: __init__.py  cards.py  cookies.py
